# solid-ml

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  LIMITATIONS.md  Makefile  PERF_RESULTS.md  README.md  TEMPLATE_COMPILER_FEATURES_NEEDED.md  dune-project  dune-workspace  esy.json  session-ses_44de.md  solid-ml-browser.opam  solid-ml-internal.opam  solid-ml-router.opam  solid-ml-server.opam  solid-ml-ssr.opam  solid-ml-template-ppx.opam  solid-ml-template-runtime.opam  solid-ml.opam
bench/: bench_compare.ml  bench_observers.ml  bench_simple.ml  dune  dune_obs  dune_opt  perf_bench.ml  test_opt.ml
dev-tools.locks/ocamlformat/: lock.dune
docs/: A-01-architecture.md  A-06-template-compiler-plan.md  MIGRATIONS.md  guide-mlx-migration.md  guide-mlx.md  guide-ssr-hydration.md  rfc-mlx-dx.md  rfc-mlx-implementation-plan.md
dune.lock/: bstr.pkg  cohttp-lwt-unix.pkg  cohttp-lwt.pkg  cohttp.pkg  conduit-lwt-unix.pkg  conduit-lwt.pkg  conf-libcurl.pkg  conf-libev.pkg  curl.pkg  dune-private-libs.pkg  dune-site.pkg  http.pkg  lock.dune  melange.pkg  menhir.pkg  menhirCST.pkg  mlx.pkg  multipart_form-lwt.pkg  multipart_form.pkg  ocaml-base-compiler.pkg  ocaml.pkg
examples/: README.md  index.html
examples/browser_counter/: README.md  counter.ml  dune  index.html
examples/browser_router/: dune  index.html  router_demo.ml  server.ml  shared_components.ml  shared_components.mlx
examples/cleanup_example/: README.md  cleanup.ml  dune  index.html
examples/counter/: counter.ml  dune
examples/dune_package_demo/: README.md  dune-project
examples/dune_package_demo/src/: dune  main.ml
examples/full_ssr_app/: .gitignore  Dockerfile  README.md  dune  dune-project  server.ml
examples/full_ssr_app/client/: client.ml  client_platform.ml  dune
examples/full_ssr_app/server/: dune  server.ml  server_platform.ml
examples/full_ssr_app/shared/: async.mlx  components.ml  components.mlx  dune  filters.mlx  inline_edit.mlx  platform_intf.ml  routes.ml  template_keyed.mlx  theme.mlx  undo_redo.mlx  wizard.mlx
examples/full_ssr_app/static/: client.js
examples/js_framework_benchmark/: .gitignore  dune  main.ml
examples/parallel/: dune  parallel.ml
examples/router/: dune  router.ml
examples/ssr_api_app/: Dockerfile  README.md  dune  dune-project  server.ml
examples/ssr_api_app/client/: api_client.ml  client.ml  dune  fetch_client.ml  json_client.ml
examples/ssr_api_app/server/: api_server.ml  dune  fetch_server.ml  json_server.ml  server.ml
examples/ssr_api_app/shared/: api.ml  async.ml  components.mlx  decode.ml  dune  error.ml  json_intf.ml  routes.ml
examples/ssr_api_app/static/: client.js
examples/ssr_hydration_docker/: Dockerfile  README.md
examples/ssr_hydration_docker/client/: client.ml  dune
examples/ssr_hydration_docker/server/: dune  server.ml
examples/ssr_hydration_docker/shared/: components.mlx  dune
examples/ssr_hydration_docker/static/: client.js  styles.css
examples/ssr_server/: Dockerfile  dune  server.ml
examples/ssr_server/client/: client.ml  dune
examples/ssr_server/shared/: components.mlx  dune
examples/state_hydration_demo/: README.md
examples/state_hydration_demo/client/: dune  main.ml
examples/state_hydration_demo/server/: dune  main.ml
examples/state_hydration_demo/shared/: components.ml  dune
examples/template_counter/: README.txt  client.ml  dune  index.html  ssr.ml
examples/template_counter/shared/: components.mlx  dune
examples/todo/: dune  todo.ml
frontend/: tailwind.config.js
frontend/lib/web/: page_blog.ml  page_contribute.ml  page_friends.ml  page_venue_detail.ml  venue_card.ml
frontend/lib/web_client/: events_calendar.ml
frontend/src/: retro-theme.css
lib/solid-ml/: batch.ml  batch.mli  component.ml  context.ml  context.mli  deferred.ml  dune  effect.ml  effect.mli  error_boundary.ml  error_boundary.mli  html_intf.ml  memo.ml  memo.mli  owner.ml  owner.mli  reactive.ml  resource.ml  runtime.ml  runtime.mli  scoped.ml  scoped.mli  signal.ml  signal.mli  solid_ml.ml  solid_ml_server.ml  store.ml  suspense.ml  suspense.mli  transition.ml  unique_id.ml  unique_id.mli
lib/solid-ml-browser/: action.ml  async.ml  deferred.ml  dom.ml  dom.mli  dune  error_boundary.ml  event.ml  event_replay.ml  for.ml  html.ml  html.mli  hydration.ml  index.ml  navigation.ml  navigation.mli  portal.ml  reactive.ml  reactive.mli  reactive_core.ml  render.ml  render.mli  resource.ml  router.ml  solid_ml_browser.ml  state.ml  state.mli  store.ml  suspense.ml  transition.ml  unique_id.ml
lib/solid-ml-core/: backend.ml  dune  reactive_functor.ml  solid_ml_core.ml  types.ml
lib/solid-ml-dom/: dom.ml  dune  event.mli  reactive.ml  reactive.mli  reactive_core.ml  render.mli  solid_ml_dom.ml
lib/solid-ml-html/: dune  html.ml  html.mli  render.ml  solid_ml_html.ml
lib/solid-ml-internal/: backend.ml  dune  filter.ml  reactive_functor.ml  solid_ml_internal.ml  types.ml
lib/solid-ml-router/: components.ml  dune  resource.ml  route.ml  router.ml  solid_ml_router.ml
lib/solid-ml-ssr/: dune  html.ml  html.mli  render.ml  render.mli  resource_state.ml  router_components.ml  router_resource.ml  solid_ml_ssr.ml  state.ml  state.mli
lib/solid-ml-template-ppx/: dune  solid_ml_template_ppx.ml
lib/solid-ml-template-runtime/: dune  env_intf.ml  solid_ml_template_runtime.ml  template_intf.ml
test/: dune  test_additional_components.ml  test_component.ml  test_html.ml  test_reactive.ml  test_router.ml  test_solidjs_compat.ml  test_ssr_shared.ml  test_suspense.ml  test_template.ml  test_template_attr.ml  test_template_compiler.ml  test_template_ppx.ml
test_browser/: dune  test_action.ml  test_async.ml  test_env.ml  test_reactive.ml  test_store.ml
test_browser_dom/: dune  runner.html  test_for_dom.ml  test_index_dom.ml  test_switch_dom.ml  test_template_dom.ml
test_mlx/: dune  test_template_attr_mlx.mlx  test_template_auto_text_children_mlx.mlx  test_template_compiler_mlx.mlx  test_template_diagnostics.ml
