(test
  (name test_reactive)
  (libraries solid-ml))

(test
  (name test_html)
  (libraries solid-ml solid-ml-ssr))

(test
  (name test_solidjs_compat)
  (libraries solid-ml))

(test
  (name test_router)
  (libraries solid-ml solid-ml-ssr solid-ml-router))

(test
  (name test_suspense)
  (libraries solid-ml solid-ml-router))

(test
  (name test_additional_components)
  (libraries solid-ml))

(test
  (name test_component)
  (libraries solid-ml solid-ml-ssr))

(test
  (name test_template)
  (libraries solid-ml solid-ml-ssr))

(test
  (name test_template_ppx)
  (modules test_template_ppx)
  (libraries ppxlib solid-ml-template-ppx solid-ml-template-runtime))

(test
  (name test_template_compiler)
  (modules test_template_compiler)
  (libraries solid-ml solid-ml-ssr solid-ml-template-runtime)
  (preprocess (pps solid-ml-template-ppx)))
