; Browser reactive core tests
;
; These tests verify the browser reactive implementation works correctly.
; Run with: make browser-tests
;   or: dune build @test_browser/melange
;       node _build/default/test_browser/output/test_browser/test_reactive.js

(melange.emit
 (target output)
 (libraries solid-ml-browser)
 (preprocess (pps melange.ppx))
 (module_systems es6))
