; Browser router example - compiles to JavaScript via Melange

(melange.emit
 (target output)
 (libraries solid-ml-browser shared_components)
 (modules router_demo)
 (preprocess (pps melange.ppx))
 (module_systems es6))

(library
 (name shared_components)
 (modules shared_components)
 (libraries solid-ml-template-runtime solid-ml-server)
 (modes byte native melange)
 (preprocess (pps solid-ml-template-ppx)))

(executable
 (name server)
 (modules server)
 (libraries dream solid-ml-ssr solid-ml-router shared_components))
