(lang dune 3.20)

(name dune-package-demo)
(generate_opam_files false)

(package
 (name dune-package-demo)
 (synopsis "solid-ml-server hello world using dune")
 (description "Minimal dune project that renders a solid-ml-server component on the server.")
 (depends
  (solid-ml-server (>= 0.1.0))
  (solid-ml-ssr (>= 0.1.0))))
