; SSR API App Example - Server
;
; Build: ENABLE_DREAM=1 dune build examples/ssr_api_app/server.exe
; Run:   make example-ssr-api
;
; Requires: opam install dream cohttp-lwt-unix

(executable
 (name server)
 (enabled_if (= %{env:ENABLE_DREAM=0} "1"))
 (libraries solid-ml solid-ml-html dream cohttp-lwt-unix yojson))
