; SSR API App Example - Server
;
; Build: dune build examples/ssr_api_app/server.exe
; Run:   make example-ssr-api
;
; Requires: dream + cohttp-lwt-unix + yojson (install via dune pkg lock)
; This example is disabled by default - requires additional dependencies

(executable
 (name server)
 (enabled_if false)
 (libraries solid-ml solid-ml-ssr dream cohttp-lwt-unix yojson))
