(lang dune 3.20)

(using melange 0.1)

; MLX support (JSX-like syntax)
(dialect
 (name mlx)
 (implementation
  (extension mlx)
  (preprocess
   (run mlx-pp %{input-file}))))

(name ssr_api_app)
(version 0.1.0)

(package
 (name ssr_api_app)
 (synopsis "Example SSR app for solid-ml-server")
 (description "A full-stack SSR example using Dream and solid-ml-server.")
 (allow_empty)
   (depends
    (ocaml (= 5.4.0))
   (dream (>= 1.0.0~alpha8))
   (solid-ml (>= 0.1.0))
   (curl (>= 0.9.0))
   (yojson (>= 2.0.0))))
