; solid-ml-browser: Browser-side reactive framework
; 
; This library compiles to JavaScript via Melange and provides:
; - DOM element creation and manipulation
; - Event handling
; - Hydration of server-rendered HTML
; - Uses shared reactive core with browser-specific backend
;
; To build: dune build lib/solid-ml-browser

(library
 (name solid_ml_browser)
 (public_name solid-ml-browser)
 (modes melange)
 (preprocess (pps melange.ppx))
 (libraries solid-ml-internal melange.js solid-ml-template-runtime solid-ml))
