; solid-ml-core: Shared reactive core used by both server and browser
;
; This package provides a functor-based reactive system that can be
; instantiated with different backends:
; - Server: Domain-local storage for thread-safe isolation
; - Browser: Global refs (safe in single-threaded JS)

(library
 (name solid_ml_core)
 (public_name solid-ml-core)
 (libraries))
